# urutau-icons-app

./: .gitignore  CMakeLists.txt  ChangeLog  Makefile  Makefile.in  README.md  aclocal.m4  config.h  config.status  configure  configure.ac  libtool  urutau_icons
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
data/: com.github.btd1337.urutau-icons-app.appdata.xml  com.github.btd1337.urutau-icons-app.desktop
debian/: changelog  control  copyright  files  preinst
src/: Makefile  Makefile.am  Makefile.in  urutau_icons  urutau_icons.c  urutau_icons.ui  urutau_icons.vala  urutau_icons.vala~
src/.deps/: urutau_icons.Po
